# advent-of-code

./: Cargo.toml  README.md  justfile  shell.nix
daily-template/: Cargo.toml
daily-template/benches/: benches.rs
daily-template/src/: lib.rs
day-01/: Cargo.toml
day-01/benches/: benches.rs
day-01/src/: lib.rs
day-02/: Cargo.toml
day-02/benches/: benches.rs
day-02/src/: lib.rs
day-03/: Cargo.toml
day-03/benches/: benches.rs
day-03/src/: lib.rs
day-04/: Cargo.toml
day-04/benches/: benches.rs
day-04/src/: lib.rs
day-05/: Cargo.toml
day-05/benches/: benches.rs
day-05/src/: lib.rs
day-06/: Cargo.toml
day-06/benches/: benches.rs
day-06/src/: lib.rs
day-07/: Cargo.toml
day-07/benches/: benches.rs
day-07/src/: lib.rs
day-08/: Cargo.toml
day-08/benches/: benches.rs
day-08/src/: lib.rs
day-09/: Cargo.toml
day-09/benches/: benches.rs
day-09/src/: lib.rs
day-10/: Cargo.toml
day-10/benches/: benches.rs
day-10/src/: lib.rs
day-11/: Cargo.toml
day-11/benches/: benches.rs
day-11/src/: lib.rs
day-12/: Cargo.toml
day-12/benches/: benches.rs
day-12/src/: lib.rs
day-13/: Cargo.toml
day-13/benches/: benches.rs
day-13/src/: lib.rs
day-15/: Cargo.toml
day-15/benches/: benches.rs
day-15/src/: lib.rs
