[package]
name = "day-04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.12.0"
nom = "7.1.3"
regex = "1.10.2"

[dev-dependencies]
divan = "0.1.4"

[[bench]]
name = "benches"
harness = false
