[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.12.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
nom = "7.1.3"
rayon = "1.8.0"
regex = "1.10.2"

[dev-dependencies]
divan = "0.1.4"
nom = "7.1.3"

[[bench]]
name = "benches"
harness = false
