[package]
name = "day-07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.12.0"
nom = "7.1.3"
regex = "1.10.2"
test-log = { version = "0.2.14", default-features = false, features = [
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

[dev-dependencies]
divan = "0.1.4"

[[bench]]
name = "benches"
harness = false
