[package]
name = "day-08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = { workspace = true }
regex = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
test-log = { workspace = true    }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "benches"
harness = false
