[package]
name = "day-10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.12.0"
regex = "1.10.2"
tracing = { workspace = true }
test-log = { workspace = true }

[dev-dependencies]
divan = "0.1.4"

[[bench]]
name = "benches"
harness = false
