[package]
name = "day-12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.12.0"
regex = "1.10.2"
tracing = { workspace = true }
test-log = { workspace = true }
nom = { workspace = true }
itertools = "0.12.0"
rayon = { workspace = true }
cached = "0.46.1"

[dev-dependencies]
divan = "0.1.4"
rstest = "0.18.2"

[[bench]]
name = "benches"
harness = false
